<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenSLTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="start">start</string>
      <string name="uri_start">uri_start</string>
    <string name="pause">pause</string>
	 <string name="stop">stop</string>
	  <string name="mute">mute</string>
	   <string name="unmute">unmute</string>
</resources>
